Added exeption handel